[package]
name = "evo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[dependencies]
bevy={version="0.8",features=["dynamic"]}
bevy-inspector-egui = "0.13.0"
bevy_rapier2d = "0.17.0"
