[package]
name = "evo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.wasm32-wasi]
runner = "wasm-server-runner"

[dependencies]
bevy={version="0.8"}
bevy-inspector-egui = "0.13.0"
bevy_rapier2d = "0.17.0"
rand = "0.8.5"
